# jellyfin-radio

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: jellyfin.rs  main.rs  player.rs  streamer.rs
